--- a/resources/public/css/tryclojure.css
+++ b/resources/public/css/tryclojure.css
@@ -5,9 +5,13 @@ body {
  color:#444;
 }
 
+a {
+ color:#111;
+}
+
 #wrapper {
  text-align: left;
- width: 620px;
+ width: 520px;
  margin: 0 auto;
 }
 
@@ -43,6 +47,8 @@ body {
 }
 
 .prose-holder {
+  width:500px;
+
   margin:10px;
   border:1px solid #aaa;
   -moz-border-radius: 5px;
@@ -53,19 +59,34 @@ body {
   margin:10px;
 }
 
+div#container {
+  width:860px;
+}
+
 .story {
   background-color:#0C132E;
-  margin-left:-30px;
+  margin-left:-24px;
   -moz-border-radius: 5px;
   border-radius: 5px;
 }
 
 .story-code {
-  width:572px;
-  padding:20px 36px 20px 30px;
+  width:472px;
+  padding:20px 30px 20px 24px;
   color: #fff;
   -moz-border-radius: 5px;
   border-radius: 5px;
+}
+
+.help {
+  color:#999;
+  float:right;
+  width:320px;
+  height:200px;
+  border-radius: 5px;
+  padding:10px;
+  -moz-border-radius: 5px;
+  line-height:18px;
 }
 
 .story-code .identifier { color:#fff; }
@@ -86,6 +107,7 @@ body {
 
 
 #console {
+ width:500px;
  height: 220px;
  background: #eee;
  margin: 10px;
@@ -95,7 +117,7 @@ body {
 }
 
 #console div.jquery-console-inner {
- width:580px;
+ width:500px;
  height:200px;
  margin: 10px 10px;
  overflow:auto;
@@ -109,11 +131,11 @@ body {
 
 }
 #console div.jquery-console-prompt-box {
-  color: #06f;
+  color: #444;
   font-family:monospace;
 }
 #console div.jquery-console-focus span.jquery-console-cursor {
- background:#06F; color:#eee; font-weight:bold;
+ background:#444; color:#eee; font-weight:bold;
 }
 #console div.jquery-console-message-error {
  color:#ef0505; font-family:sans-serif; font-weight:bold;
@@ -125,7 +147,7 @@ body {
 }
 #console span.jquery-console-prompt-label {
  font-weight:bold;
- color: #06f;
+ color: #444;
 }
 
 .bottom {
